--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
         document.getElementById("displayImage").src = url;
       }
     </script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/app.js"></script>
   </body>
 </html>
