--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>app</title>
   </head>
   <body class="cool">
@@ -53,6 +54,6 @@
         document.getElementById("displayImage").src = url;
       }
     </script>
-    <script type="module" src="/src/app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
