--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         document.getElementById("displayImage").src = url;
       }
     </script>
-    <script src="app.js"></script>
+    <script src="./src/app.js"></script>
   </body>
 </html>
