--- a/index.html
+++ b/index.html
@@ -12,35 +12,28 @@
       <h1 class="hero">Meme Generator</h1>
       <div class="main">
         <button class="filterbutton" onclick="showAll()">Show All Memes</button>
-        <button class="filterbutton" onclick="filter('funny')">
-          Show Funny Memes
-        </button>
-        <button class="filterbutton" onclick="filter('unfunny')">
-          Show Unfunny Memes
-        </button>
+        <button class="filterbutton" onclick="filter('funny')">Show Funny Memes</button>
+        <button class="filterbutton" onclick="filter('unfunny')">Show Unfunny Memes</button>
         <button class="btn">Change to Light</button>
-<form id="memeForm">
-        <input type="text" id="memeName" placeholder="Meme name" required><br>
-        <input type="text" id="memeDescription" placeholder="Meme description" required><br>
-        <input type="text" id="memeImage" placeholder="Image URL" required><br>
-        <select id="memeTag" required>
-         <option value="">Select tag</option>
-         <option value="funny">Funny</option>
-         <option value="unfunny">Unfunny</option>
-  </select><br><br>
-  <button type="submit">Add Meme</button>
-</form>
-        <div class="container">
+        <form id="memeForm">
+          <input type="text" id="memeName" placeholder="Meme name" required><br>
+          <input type="text" id="memeDescription" placeholder="Meme description" required><br>
+          <input type="text" id="memeImage" placeholder="Image URL" required><br>
+          <select id="memeTag" required>
+            <option value="">Select tag</option>
+            <option value="funny">Funny</option>
+            <option value="unfunny">Unfunny</option>
+          </select><br><br>
+          <button type="submit">Add Meme</button>
+        </form>
+      </div>
+    </div>
     <script>
       function filter(tag) {
         const select = document.querySelectorAll(".card");
         select.forEach((meme) => {
           const memetag = meme.getAttribute("data-type");
-          if (memetag === tag) {
-            meme.style.display = "";
-          } else {
-            meme.style.display = "none";
-          }
+          meme.style.display = memetag === tag ? "" : "none";
         });
       }
       function showAll() {
@@ -50,10 +43,10 @@
         });
       }
       function loadImage() {
-        let url = document.getElementById("imageUrl").value;
+        let url = document.getElementById("memeImage").value; <!-- fixed ID -->
         document.getElementById("displayImage").src = url;
       }
     </script>
-   <script type="module" src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
